# zero2prod_rust

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: main.rs
tests/: health_check.rs
